{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "0350dd04-1e39-4161-83dc-898946436fc0",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "e2bf92c2-63a9-4899-aa81-844fb9e7badb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9673b706-612a-420e-a515-b6643cd1b152",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}